--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -50,7 +50,7 @@
 
         </div>
     </div>
-    <div style="padding-top: 20px;">
+    <!-- <div style="padding-top: 20px;">
             <div class="breadcrumb event-top paddadusy mar-adjust">
                     <div style="width: 50%;     padding-top: 3px;" aria-current="page">Events</div>
                     <div style="width: 50%;">
@@ -63,15 +63,9 @@
                         </ul>
         
                     </div>
-                </div>
-                
-        <!-- <nav aria-label="breadcrumb">
-            <ol class="breadcrumb event-top">
-                <li aria-current="page">Events</li>
-            </ol>
-        </nav> -->
-    </div>
-    <div style="float: right;    margin-bottom: 10px;">
+                </div>        
+    </div> -->
+    <!-- <div style="float: right;    margin-bottom: 10px;">
         <button type="button" class="clr-btn"><i class="fa fa-times" aria-hidden="true"></i> Clear Filters</button>
         <button type="button" class="excel-btn"><i class="fa fa-file-excel-o" aria-hidden="true"></i> Download
             Excel</button>
@@ -159,4 +153,5 @@
             </tr>
         </tbody>
 
-    </table>
+    </table> -->
+    <app-event-details-info></app-event-details-info>
